--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.9.3",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
@@ -33,6 +34,8 @@
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.5.2",
+    "react-app-rewire-less": "^2.1.3",
+    "react-app-rewired": "^1.6.2",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.5.2",
     "resolve": "1.6.0",
@@ -90,5 +93,10 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "devDependencies": {
+    "babel-plugin-import": "^1.9.1",
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0"
   }
 }
