--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "antd": "^3.9.3",
     "babel-plugin-import": "^1.9.1",
+    "classnames": "^2.2.6",
     "dva": "^2.4.0",
     "react": "^16.5.2",
     "react-app-rewire-less": "^2.1.3",
