--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-app-rewire-less": "^2.1.3",
     "react-app-rewired": "^1.6.2",
     "react-dom": "^16.5.2",
+    "react-helmet": "^5.2.0",
     "react-intl": "^2.7.1",
     "react-scripts": "1.1.5"
   },
