--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "babel-plugin-import": "^1.9.1",
     "classnames": "^2.2.6",
     "dva": "^2.4.0",
-    "mockjs": "^1.0.1-beta3",
     "react": "^16.5.2",
     "react-app-rewire-less": "^2.1.3",
     "react-app-rewired": "^1.6.2",
@@ -17,11 +16,14 @@
     "react-scripts": "1.1.5"
   },
   "scripts": {
-    "server":"react-app-rewired start",
-    "json_server": "json-server mock/api.js --port 3003",
+    "server": "react-app-rewired start",
+    "json_server": "json-server mock/api.js",
     "start": "concurrently \"npm run json_server\" \"npm run server\" ",
     "build": "react-app-rewired build",
     "test": " react-app-rewired test --env=jsdom",
     "eject": "react-app-rewired eject"
+  },
+  "devDependencies": {
+    "mockjs": "^1.0.1-beta3"
   }
 }
