--- a/package.json
+++ b/package.json
@@ -4,33 +4,40 @@
   "private": true,
   "dependencies": {
     "antd": "^3.9.3",
+    "axios": "^0.18.0",
     "babel-plugin-import": "^1.9.1",
     "classnames": "^2.2.6",
     "dva": "^2.4.0",
+    "jsonp": "^0.2.1",
     "react": "^16.5.2",
     "react-app-rewire-less": "^2.1.3",
     "react-app-rewired": "^1.6.2",
     "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
     "react-intl": "^2.7.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.isequal": "^4.5.0",
+    "path-to-regexp": "^2.2.0"
   },
   "scripts": {
     "server": "react-app-rewired start",
-    "json_server": "json-server mock/api.js",
-    "start": "concurrently \"npm run json_server\" \"npm run server\" ",
+    "mock": "json-server mock/v1.js --port 3003",
+    "crossenv": "cross-env PORT=3000 HTTPS=true",
+    "start": "concurrently \"npm run mock\" \"npm run server\" \"npm run crossenv\" ",
     "build": "react-app-rewired build",
     "test": " react-app-rewired test --env=jsdom",
     "eject": "react-app-rewired eject"
   },
   "proxy": {
     "/api": {
-      "target": "http://localhost:3003/news",
+      "target": "http://localhost:3003",
       "changeOrigin": true,
       "secure": false
     }
   },
   "devDependencies": {
+    "cross-env": "^5.2.0",
     "mockjs": "^1.0.1-beta3"
   }
 }
