--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "server": "react-app-rewired start",
-    "mock": "json-server mock/v1.js --port 3003",
+    "mock": "node mock/_utils.js",
     "crossenv": "cross-env PORT=3000 HTTPS=true",
     "start": "concurrently \"npm run mock\" \"npm run server\" \"npm run crossenv\" ",
     "build": "react-app-rewired build",
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
+    "json-server": "^0.14.0",
     "mockjs": "^1.0.1-beta3"
   }
 }
