--- a/package.json
+++ b/package.json
@@ -3,22 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^3.9.3",
+    "antd": "^3.11.2",
     "axios": "^0.18.0",
-    "babel-plugin-import": "^1.9.1",
+    "babel-plugin-import": "^1.11.0",
     "classnames": "^2.2.6",
-    "dva": "^2.4.0",
+    "dva": "^2.4.1",
     "jsonp": "^0.2.1",
-    "react": "^16.5.2",
-    "react-app-rewire-less": "^2.1.3",
-    "react-app-rewired": "^1.6.2",
-    "react-dom": "^16.5.2",
-    "react-helmet": "^5.2.0",
-    "react-intl": "^2.7.1",
-    "react-scripts": "1.1.5",
     "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0",
-    "path-to-regexp": "^2.2.0"
+    "path-to-regexp": "^2.2.0",
+    "react": "^16.6.3",
+    "react-app-rewire-less": "^2.1.3",
+    "react-app-rewired": "^1.6.2",
+    "react-dom": "^16.6.3",
+    "react-helmet": "^5.2.0",
+    "react-intl": "^2.7.2",
+    "react-scripts": "1.1.5"
   },
   "scripts": {
     "server": "react-app-rewired start",
