--- a/package.json
+++ b/package.json
@@ -15,10 +15,17 @@
     "react": "^16.6.3",
     "react-app-rewire-less": "^2.1.3",
     "react-app-rewired": "^1.6.2",
+    "react-document-title": "^2.0.3",
+    "react-side-effect": "^1.1.5",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
     "react-intl": "^2.7.2",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.2.0",
+    "prettier": "^1.13.5",
+    "react-styleguidist": "^7.0.17",
+    "webpack-bundle-analyzer": "^2.13.1"
   },
   "scripts": {
     "server": "react-app-rewired start",
