--- a/package.json
+++ b/package.json
@@ -8,22 +8,23 @@
     "babel-plugin-import": "^1.11.0",
     "classnames": "^2.2.6",
     "dva": "^2.4.1",
+    "husky": "^0.14.3",
     "jsonp": "^0.2.1",
+    "lint-staged": "^7.2.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0",
+    "nprogress": "^0.2.0",
     "path-to-regexp": "^2.2.0",
+    "prettier": "^1.13.5",
     "react": "^16.6.3",
     "react-app-rewire-less": "^2.1.3",
     "react-app-rewired": "^1.6.2",
     "react-document-title": "^2.0.3",
-    "react-side-effect": "^1.1.5",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
     "react-intl": "^2.7.2",
     "react-scripts": "1.1.5",
-    "husky": "^0.14.3",
-    "lint-staged": "^7.2.0",
-    "prettier": "^1.13.5",
+    "react-side-effect": "^1.1.5",
     "react-styleguidist": "^7.0.17",
     "webpack-bundle-analyzer": "^2.13.1"
   },
